# asr-server

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: workers.md
notebooks/: colab_transcribe_start_stop.ipynb
scripts/: test_manifest.py  test_slice.py  test_start_stop.py  test_transcribe_load.py
src/asr_server/: main.py
src/asr_server/api/: deps.py  router.py
src/asr_server/api/routes/: features.py  manifest.py  slice.py  transcribe.py
src/asr_server/infra/worker/: __init__.py  config.py  dispatch.py  errors.py  session.py
src/asr_server/schemas/: features.py  transcribe.py
src/asr_server/service/: manifest.py  slice.py  transcribe.py  whisper_model.py
src/asr_server/service/features/: __init__.py  chinese_hubert_base.py  speech_eres2netv2w24s4ep4_sv_zh_cn_16k_common.py
src/asr_server/utils/: __init__.py  audio.py  manifest_zip.py  whisper_assets.py
src/faster_whisper_server/: main.py
src/faster_whisper_server/api/: router.py
src/faster_whisper_server/api/routes/: transcribe.py
src/faster_whisper_server/loaders/: cuda_utils.py
src/faster_whisper_server/service/: transcribe.py  whisper_model.py
tests/: test_worker_dispatch.py
workers/: .gitignore  registry.toml  run_worker.py
workers/huggingface/TencentGameMate/chinese-hubert-base/: pyproject.toml
workers/huggingface/TencentGameMate/chinese-hubert-base/src/chinese_hubert_base/: __init__.py  cli.py  download.py  extract.py  serve.py
workers/modelscope/iic/speech_eres2netv2w24s4ep4_sv_zh-cn_16k-common/: pyproject.toml  smoke_test.py
workers/modelscope/iic/speech_eres2netv2w24s4ep4_sv_zh-cn_16k-common/src/speech_eres2netv2w24s4ep4_sv_zh_cn_16k_common/: __init__.py  cli.py  download.py  extract.py  serve.py
