[project]
name = "chinese-hubert-base"
version = "0.1.0"
description = "CLI wrapper for TencentGameMate/chinese-hubert-base"
requires-python = ">=3.10,<3.11"
dependencies = [
    "huggingface-hub>=0.26.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "transformers>=4.16.2",
]

[project.scripts]
chinese-hubert-base = "chinese_hubert_base.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
